BUGFIX/MINOR(prometheus): Fix the use of tags `install` and `configure`
 ##### SUMMARY

It can be useful to prepare images to run only the `install` tag and then only the` configure` tag

 ##### IMPACT
N/A

 ##### ADDITIONAL INFORMATION

--- a/tasks/install/CentOS.yml
+++ b/tasks/install/CentOS.yml
@@ -7,6 +7,7 @@
     gpgkey: https://packagecloud.io/prometheus-rpm/release/gpgkey
     gpgcheck: 0
   when: prometheus_upstream_package_repository
+  tags: install
 
 - name: Install
   yum:
@@ -18,4 +19,5 @@
   ignore_errors: "{{ ansible_check_mode }}"
   retries: 5
   delay: 2
+  tags: install
 ...
